refine docs chain -> langgraph

--- a/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
@@ -18,9 +18,9 @@
     "\n",
     "A common process applied in this context is summarization, in which a running summary is modified as we proceed through chunks of a long text. This is particularly useful for texts that are large compared to the context window of a given LLM.\n",
     "\n",
-    "An [LCEL](/docs/concepts/#langchain-expression-language-lcel) implementation confers a number of advantages for this problem, including support for token-by-token streaming. Because it is assembled from modular components, it is also simple to extend or modify (e.g., to incorporate [tool calling](/docs/concepts/#functiontool-calling) or other behavior).\n",
+    "A [LangGraph](https://langchain-ai.github.io/langgraph/) implementation confers a number of advantages for this problem, including support for token-by-token streaming. Because it is assembled from modular components, it is also simple to extend or modify (e.g., to incorporate [tool calling](/docs/concepts/#functiontool-calling) or other behavior).\n",
     "\n",
-    "Below we will go through both `RefineDocumentsChain` and a corresponding LCEL implementation on a simple example for illustrative purposes.\n",
+    "Below we will go through both `RefineDocumentsChain` and a corresponding LangGraph implementation on a simple example for illustrative purposes.\n",
     "\n",
     "Let's first load a chat model:\n",
     "\n",
@@ -43,7 +43,7 @@
     "\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "llm = ChatOpenAI(model=\"gpt-3.5-turbo-0125\", temperature=0)"
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "abb1abb0-0c5e-4179-8431-c2b2d52bd57b",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4b2dd248-8bf3-40a5-9569-df32558b5d21",
    "metadata": {},
    "outputs": [],
@@ -147,17 +147,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8686f56f-992f-4556-a74c-8d3903d0db38",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Apples are red, blueberries are blue, and bananas are yellow in color.'"
+       "'Apples are typically red in color, blueberries are blue, and bananas are yellow.'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,47 +182,57 @@
    "source": [
     "</details>\n",
     "\n",
-    "### LCEL\n",
+    "### LangGraph\n",
     "\n",
     "<details open>\n",
     "\n",
-    "Below we show an LCEL implementation of this process:\n",
+    "Below we show a LangGraph implementation of this process:\n",
     "\n",
     "- We use the same two templates as before.\n",
     "- We generate a simple chain for the initial summary that plucks out the first document, formats it into a prompt and runs inference with our LLM.\n",
-    "- We generate a second `_refine_remaining_docs` chain that generates a sequence of simple `prompt | llm | StrOutputParser()` chains, formatting the context from each remaining document into the prompt."
+    "- We generate a second `refine_summary_chain` operates on each successive document, refining the initial summary.\n",
+    "\n",
+    "We will need to install `langgraph`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "044fee44-bbbf-4e81-97c7-4c1168d5e087",
+   "execution_count": null,
+   "id": "bda06266-f4fe-43cf-9044-0ce5ee76c793",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
+    "pip install -qU langgraph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3477bef6-97cc-492f-87fe-cf5336edd581",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import operator\n",
+    "from typing import Annotated, List, TypedDict\n",
     "\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from langchain_core.runnables import (\n",
-    "    RunnableLambda,\n",
-    "    RunnablePassthrough,\n",
-    "    RunnableSequence,\n",
-    ")\n",
+    "from langchain_core.runnables import RunnableConfig\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langgraph.constants import Send\n",
+    "from langgraph.graph import END, START, StateGraph\n",
     "\n",
+    "llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)\n",
+    "\n",
+    "# Initial summary\n",
     "summarize_prompt = ChatPromptTemplate(\n",
     "    [\n",
     "        (\"human\", \"Write a concise summary of the following: {context}\"),\n",
     "    ]\n",
     ")\n",
+    "initial_summary_chain = summarize_prompt | llm | StrOutputParser()\n",
     "\n",
-    "initial_summary = (\n",
-    "    RunnableLambda(lambda docs: docs[0].page_content)  # select first document\n",
-    "    | summarize_prompt  # Format content into summarize prompt\n",
-    "    | llm  # Generate response\n",
-    "    | StrOutputParser()  # Cast to string\n",
-    ")\n",
-    "\n",
+    "# Refining the summary with new docs\n",
     "refine_template = \"\"\"\n",
     "Produce a final summary.\n",
     "\n",
@@ -238,59 +248,63 @@
     "\"\"\"\n",
     "refine_prompt = ChatPromptTemplate([(\"human\", refine_template)])\n",
     "\n",
+    "refine_summary_chain = refine_prompt | llm | StrOutputParser()\n",
     "\n",
-    "def _refine_remaining_docs(input_dict: dict) -> RunnableSequence:\n",
-    "    \"\"\"Create a sequence of summarizers, each adding context from a document.\"\"\"\n",
-    "    steps = []\n",
-    "    for document in input_dict[\"documents\"]:\n",
-    "        steps.append(\n",
-    "            # format text from document[i] into refine prompt\n",
-    "            refine_prompt.partial(context=document.page_content)\n",
-    "            | llm  # generate response\n",
-    "            | StrOutputParser()  # cast to string\n",
+    "\n",
+    "class State(TypedDict):\n",
+    "    contents: List[str]\n",
+    "    summary: str\n",
+    "\n",
+    "\n",
+    "# Here we generate an answer with score, given a document\n",
+    "async def generate_summary(state: State, config: RunnableConfig):\n",
+    "    summary = await initial_summary_chain.ainvoke(\n",
+    "        state[\"contents\"][0],\n",
+    "        config,\n",
+    "    )\n",
+    "\n",
+    "    for content in state[\"contents\"][1:]:\n",
+    "        summary = await refine_summary_chain.ainvoke(\n",
+    "            {\"existing_answer\": summary, \"context\": content},\n",
+    "            config,\n",
     "        )\n",
-    "    return RunnableSequence(*steps)\n",
+    "\n",
+    "    return {\"summary\": summary}\n",
     "\n",
     "\n",
-    "chain = (\n",
-    "    {\n",
-    "        # create initial summary\n",
-    "        \"existing_answer\": initial_summary,\n",
-    "        # pass along remaining documents\n",
-    "        \"documents\": RunnableLambda(lambda docs: docs[1:]),\n",
-    "    }\n",
-    "    # create and run a sequence of summaries on remaining docs\n",
-    "    | RunnableLambda(_refine_remaining_docs)\n",
-    ")"
+    "graph = StateGraph(State)\n",
+    "graph.add_node(\"generate_summary\", generate_summary)\n",
+    "graph.add_edge(START, \"generate_summary\")\n",
+    "graph.add_edge(\"generate_summary\", END)\n",
+    "app = graph.compile()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ca52e64b-5828-4220-96ac-4dc01668b5ec",
+   "id": "9487118a-25ea-4ecf-982b-10c72bec3325",
    "metadata": {},
    "source": [
-    "We can invoke the chain as before:"
+    "We can invoke the chain as follows:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "c1aea299-c62e-4e36-a3e5-9ed866169f39",
+   "execution_count": 7,
+   "id": "9572e4bd-5e7d-4884-8283-d516396d7c29",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Apples are typically red in color, blueberries are blue, and bananas are yellow.'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apples are typically red in color, blueberries are blue, and bananas are yellow.\n"
+     ]
     }
    ],
    "source": [
-    "chain.invoke(documents)"
+    "result = await app.ainvoke({\"contents\": [doc.page_content for doc in documents]})\n",
+    "\n",
+    "print(result[\"summary\"])"
    ]
   },
   {
@@ -300,26 +314,42 @@
    "source": [
     "In the [LangSmith trace](https://smith.langchain.com/public/6b038c7a-c56b-4ae2-9d82-686020146c43/r) we again recover three LLM calls, performing the same functions as before.\n",
     "\n",
-    "Note that the LCEL implementation allows us to stream output tokens, if desired:"
+    "Note that we can stream tokens from the application, including from intermediate steps:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "20be31b7-7981-408e-9962-b525bfc89623",
+   "id": "105d71ee-0eb8-40bf-aa82-c94121dba2f2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " | App | les |  are |  a |  red |  fruit | , |  blue | berries |  are |  blue | , |  and |  bananas |  are |  yellow | . |  | "
+      "Ap|ples| are| characterized| by| their| red| color|.|\n",
+      "\n",
+      "\n",
+      "Ap|ples| are| characterized| by| their| red| color|,| while| blueberries| are| known| for| their| blue| hue|.|\n",
+      "\n",
+      "\n",
+      "Ap|ples| are| characterized| by| their| red| color|,| blueberries| are| known| for| their| blue| hue|,| and| bananas| are| recognized| for| their| yellow| color|.|\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for chunk in chain.stream(documents):\n",
-    "    print(chunk, end=\" | \")"
+    "async for event in app.astream_events(\n",
+    "    {\"contents\": [doc.page_content for doc in documents]}, version=\"v2\"\n",
+    "):\n",
+    "    kind = event[\"event\"]\n",
+    "    if kind == \"on_chat_model_stream\":\n",
+    "        content = event[\"data\"][\"chunk\"].content\n",
+    "        if content:\n",
+    "            print(content, end=\"|\")\n",
+    "    elif kind == \"on_chat_model_end\":\n",
+    "        print(\"\\n\\n\")"
    ]
   },
   {
@@ -331,9 +361,9 @@
     "\n",
     "## Next steps\n",
     "\n",
-    "Check out the [LCEL conceptual docs](/docs/concepts/#langchain-expression-language-lcel) for more background information.\n",
+    "See [this tutorial](/docs/tutorials/summarization/) for more LLM-based summarization strategies.\n",
     "\n",
-    "See [this tutorial](/docs/tutorials/summarization/) for more LLM-based summarization strategies."
+    "Check out the [LangGraph documentation](https://langchain-ai.github.io/langgraph/) for detail on building with LangGraph."
    ]
   },
   {
