--- a/docs/docs/integrations/tools/connery.ipynb
+++ b/docs/docs/integrations/tools/connery.ipynb
@@ -57,10 +57,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
     "import getpass\n",
+    "import os\n",
     "\n",
-    "for key in ['CONNERY_RUNNER_URL','CONNERY_RUNNER_API_KEY']:\n",
+    "for key in [\"CONNERY_RUNNER_URL\", \"CONNERY_RUNNER_API_KEY\"]:\n",
     "    if not key in os.environ:\n",
     "        os.environ[key] = getpass.getpass(f\"Please enter the value for {key}: \")"
    ]
