--- a/docs/docs/integrations/tools/polygon.ipynb
+++ b/docs/docs/integrations/tools/polygon.ipynb
@@ -160,8 +160,7 @@
     "from langchain.agents import AgentExecutor, create_openai_functions_agent\n",
     "from langchain_openai import ChatOpenAI\n",
     "\n",
-    "\n",
-    "llm = ChatOpenAI(temperature=0,model=\"gpt-4o\")\n",
+    "llm = ChatOpenAI(temperature=0, model=\"gpt-4o\")\n",
     "\n",
     "instructions = \"\"\"You are an assistant.\"\"\"\n",
     "base_prompt = hub.pull(\"langchain-ai/openai-functions-template\")\n",
@@ -407,7 +406,9 @@
     }
    ],
    "source": [
-    "agent_executor.invoke({\"input\": \"What were last quarters financial numbers for Nvidia?\"})"
+    "agent_executor.invoke(\n",
+    "    {\"input\": \"What were last quarters financial numbers for Nvidia?\"}\n",
+    ")"
    ]
   },
   {
@@ -490,10 +491,24 @@
     "aggregate_tool = PolygonAggregates(api_wrapper=api_wrapper)\n",
     "\n",
     "# We can invoke directly with input\n",
-    "res = aggregate_tool.invoke({\"ticker\":\"AAPL\",\"timespan\":\"day\",\"timespan_multiplier\":1,\"from_date\":\"2024-08-01\",\"to_date\":\"2024-08-07\"})\n",
+    "res = aggregate_tool.invoke(\n",
+    "    {\n",
+    "        \"ticker\": \"AAPL\",\n",
+    "        \"timespan\": \"day\",\n",
+    "        \"timespan_multiplier\": 1,\n",
+    "        \"from_date\": \"2024-08-01\",\n",
+    "        \"to_date\": \"2024-08-07\",\n",
+    "    }\n",
+    ")\n",
     "\n",
     "model_generated_tool_call = {\n",
-    "    \"args\": {\"ticker\":\"AAPL\",\"timespan\":\"day\",\"timespan_multiplier\":1,\"from_date\":\"2024-08-01\",\"to_date\":\"2024-08-07\"}, \n",
+    "    \"args\": {\n",
+    "        \"ticker\": \"AAPL\",\n",
+    "        \"timespan\": \"day\",\n",
+    "        \"timespan_multiplier\": 1,\n",
+    "        \"from_date\": \"2024-08-01\",\n",
+    "        \"to_date\": \"2024-08-07\",\n",
+    "    },\n",
     "    \"id\": \"1\",\n",
     "    \"name\": aggregate_tool.name,\n",
     "    \"type\": \"tool_call\",\n",
@@ -535,10 +550,10 @@
     "financials_tool = PolygonFinancials(api_wrapper=api_wrapper)\n",
     "\n",
     "# We can invoke directly with input\n",
-    "res = financials_tool.invoke({\"query\":\"AAPL\"})\n",
+    "res = financials_tool.invoke({\"query\": \"AAPL\"})\n",
     "\n",
     "model_generated_tool_call = {\n",
-    "    \"args\": {\"query\":\"AAPL\"}, \n",
+    "    \"args\": {\"query\": \"AAPL\"},\n",
     "    \"id\": \"1\",\n",
     "    \"name\": financials_tool.name,\n",
     "    \"type\": \"tool_call\",\n",
@@ -572,10 +587,10 @@
     "last_quote_tool = PolygonLastQuote(api_wrapper=api_wrapper)\n",
     "\n",
     "# We can invoke directly with input\n",
-    "res = last_quote_tool.invoke({\"query\":\"AAPL\"})\n",
+    "res = last_quote_tool.invoke({\"query\": \"AAPL\"})\n",
     "\n",
     "model_generated_tool_call = {\n",
-    "    \"args\": {\"query\":\"AAPL\"}, \n",
+    "    \"args\": {\"query\": \"AAPL\"},\n",
     "    \"id\": \"1\",\n",
     "    \"name\": last_quote_tool.name,\n",
     "    \"type\": \"tool_call\",\n",
@@ -615,10 +630,10 @@
     "news_tool = PolygonTickerNews(api_wrapper=api_wrapper)\n",
     "\n",
     "# We can invoke directly with input\n",
-    "res = news_tool.invoke({\"query\":\"AAPL\"})\n",
+    "res = news_tool.invoke({\"query\": \"AAPL\"})\n",
     "\n",
     "model_generated_tool_call = {\n",
-    "    \"args\": {\"query\":\"AAPL\"}, \n",
+    "    \"args\": {\"query\": \"AAPL\"},\n",
     "    \"id\": \"1\",\n",
     "    \"name\": news_tool.name,\n",
     "    \"type\": \"tool_call\",\n",
