--- a/docs/docs/integrations/tools/connery.ipynb
+++ b/docs/docs/integrations/tools/connery.ipynb
@@ -61,7 +61,7 @@
     "import os\n",
     "\n",
     "for key in [\"CONNERY_RUNNER_URL\", \"CONNERY_RUNNER_API_KEY\"]:\n",
-    "    if not key in os.environ:\n",
+    "    if key not in os.environ:\n",
     "        os.environ[key] = getpass.getpass(f\"Please enter the value for {key}: \")"
    ]
   },
