update multi prompt and refine docs

--- a/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
@@ -255,12 +255,16 @@
     "refine_summary_chain = refine_prompt | llm | StrOutputParser()\n",
     "\n",
     "\n",
+    "# For LangGraph, we will define the state of the graph to hold the query,\n",
+    "# destination, and final answer.\n",
     "class State(TypedDict):\n",
     "    contents: List[str]\n",
     "    index: int\n",
     "    summary: str\n",
     "\n",
     "\n",
+    "# We define functions for each node, including a node that generates\n",
+    "# the initial summary:\n",
     "async def generate_initial_summary(state: State, config: RunnableConfig):\n",
     "    summary = await initial_summary_chain.ainvoke(\n",
     "        state[\"contents\"][0],\n",
@@ -269,13 +273,7 @@
     "    return {\"summary\": summary, \"index\": 1}\n",
     "\n",
     "\n",
-    "def should_refine(state: State) -> Literal[\"refine_summary\", END]:\n",
-    "    if state[\"index\"] >= len(state[\"contents\"]):\n",
-    "        return END\n",
-    "    else:\n",
-    "        return \"refine_summary\"\n",
-    "\n",
-    "\n",
+    "# And a node that refines the summary based on the next document\n",
     "async def refine_summary(state: State, config: RunnableConfig):\n",
     "    content = state[\"contents\"][state[\"index\"]]\n",
     "    summary = await refine_summary_chain.ainvoke(\n",
@@ -284,6 +282,15 @@
     "    )\n",
     "\n",
     "    return {\"summary\": summary, \"index\": state[\"index\"] + 1}\n",
+    "\n",
+    "\n",
+    "# Here we implement logic to either exit the application or refine\n",
+    "# the summary.\n",
+    "def should_refine(state: State) -> Literal[\"refine_summary\", END]:\n",
+    "    if state[\"index\"] >= len(state[\"contents\"]):\n",
+    "        return END\n",
+    "    else:\n",
+    "        return \"refine_summary\"\n",
     "\n",
     "\n",
     "graph = StateGraph(State)\n",
