--- a/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/multi_prompt_chain.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "cf1edd2b-7592-47f4-ba8d-94a56742a585",
    "metadata": {},
    "outputs": [],
@@ -247,8 +247,8 @@
     "# selection.\n",
     "graph = StateGraph(State)\n",
     "graph.add_node(\"route_query\", route_query)\n",
-    "graph.add_node(\"prompt_1\", node_1)\n",
-    "graph.add_node(\"prompt_2\", node_2)\n",
+    "graph.add_node(\"prompt_1\", prompt_1)\n",
+    "graph.add_node(\"prompt_2\", prompt_2)\n",
     "\n",
     "graph.add_edge(START, \"route_query\")\n",
     "graph.add_conditional_edges(\"route_query\", select_node)\n",
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "92ef8d86-daa6-4ff3-b722-468e7cf8bcb2",
    "metadata": {},
    "outputs": [
@@ -270,7 +270,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "61838f81-4e60-445f-9c05-563e3520ab33",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
      "output_type": "stream",
      "text": [
       "{'destination': 'vegetable'}\n",
-      "Carrots are most commonly orange, but they can also be found in a variety of other colors, including purple, yellow, red, and white. Each color may have different nutritional profiles and flavors, but orange carrots are the most widely recognized and consumed.\n"
+      "Carrots are most commonly orange, but they can also come in a variety of other colors, including purple, red, yellow, and white. The different colors often indicate varying flavors and nutritional profiles. For example, purple carrots contain anthocyanins, while orange carrots are rich in beta-carotene, which is converted to vitamin A in the body.\n"
      ]
     }
    ],
