--- a/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
+++ b/docs/docs/versions/migrating_chains/refine_docs_chain.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "A [LangGraph](https://langchain-ai.github.io/langgraph/) implementation confers a number of advantages for this problem:\n",
     "\n",
-    "- Where `RefineDocumentsChain` refines the summary via a `while` loop inside the class, a LangGraph implementation lets you step through the execution to monitor or otherwise steer it if needed.\n",
+    "- Where `RefineDocumentsChain` refines the summary via a `for` loop inside the class, a LangGraph implementation lets you step through the execution to monitor or otherwise steer it if needed.\n",
     "- The LangGraph implementation supports streaming of both execution steps and individual tokens.\n",
     "- Because it is assembled from modular components, it is also simple to extend or modify (e.g., to incorporate [tool calling](/docs/concepts/#functiontool-calling) or other behavior).\n",
     "\n",
