--- a/docs/docs/integrations/graphs/networkx.ipynb
+++ b/docs/docs/integrations/graphs/networkx.ipynb
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.graphs import GraphIndexCreator\n",
+    "from langchain_community.graphs.index_creator import GraphIndexCreator\n",
     "from langchain_openai import OpenAI"
    ]
   },
