--- a/docs/docs/introduction.mdx
+++ b/docs/docs/introduction.mdx
@@ -87,7 +87,7 @@ Build stateful, multi-actor applications with LLMs. Integrates smoothly with Lan
 
 ## Additional resources
 
-### [Versioning](/versions/overview/)
+### [Versioning](/docs/versions/overview/)
 Learn about the changes from v0.1 to v0.2, our package release policies, how to migrate legacy code, and more.
 
 ### [Security](/docs/security)
