--- a/docs/docs/integrations/chat/perplexity.ipynb
+++ b/docs/docs/integrations/chat/perplexity.ipynb
@@ -52,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chat = ChatPerplexity(temperature=0, pplx_api_key=\"YOUR_API_KEY\", model=\"llama-3-sonar-small-32k-online\")"
+    "chat = ChatPerplexity(\n",
+    "    temperature=0, pplx_api_key=\"YOUR_API_KEY\", model=\"llama-3-sonar-small-32k-online\"\n",
+    ")"
    ]
   },
   {
