--- a/docs/docs/integrations/graphs/ontotext.ipynb
+++ b/docs/docs/integrations/graphs/ontotext.ipynb
@@ -218,8 +218,9 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "\n",
-    "ontology_schema = Path(\"/path/to/langchain-graphdb-qa-chain-demo/starwars-ontology.ttl\").read_text(encoding=\"utf-8\")"
+    "ontology_schema = Path(\n",
+    "    \"/path/to/langchain-graphdb-qa-chain-demo/starwars-ontology.ttl\"\n",
+    ").read_text(encoding=\"utf-8\")"
    ]
   },
   {
@@ -277,12 +278,12 @@
     }
    ],
    "source": [
-    "chain.invoke({\n",
-    "    \"question\": \"What is the climate on Tatooine?\",\n",
-    "    \"ontology_schema\": ontology_schema,\n",
-    "})[\n",
-    "    chain.output_key_answer\n",
-    "]"
+    "chain.invoke(\n",
+    "    {\n",
+    "        \"question\": \"What is the climate on Tatooine?\",\n",
+    "        \"ontology_schema\": ontology_schema,\n",
+    "    }\n",
+    ")[chain.output_key_answer]"
    ]
   },
   {
@@ -337,12 +338,12 @@
     }
    ],
    "source": [
-    "chain.invoke({\n",
-    "    \"question\": \"What is the average box office revenue for all the Star Wars movies?\",\n",
-    "    \"ontology_schema\": ontology_schema,\n",
-    "})[\n",
-    "    chain.output_key_answer\n",
-    "]"
+    "chain.invoke(\n",
+    "    {\n",
+    "        \"question\": \"What is the average box office revenue for all the Star Wars movies?\",\n",
+    "        \"ontology_schema\": ontology_schema,\n",
+    "    }\n",
+    ")[chain.output_key_answer]"
    ]
   },
   {
@@ -480,7 +481,6 @@
    "source": [
     "from langchain_core.prompts.prompt import PromptTemplate\n",
     "\n",
-    "\n",
     "template = \"\"\"\n",
     "Write a SPARQL SELECT query to answer the user question \n",
     "delimited by triple backticks:\\n```{question}```\\n\n",
@@ -510,18 +510,18 @@
     "    ),\n",
     ")\n",
     "\n",
-    "chain.invoke({\n",
-    "    \"question\": \"What is the name of Luke Skywalker's home planet?\",\n",
-    "    \"ontology_schema\": ontology_schema,\n",
-    "    \"named_entities\": [\n",
+    "chain.invoke(\n",
+    "    {\n",
+    "        \"question\": \"What is the name of Luke Skywalker's home planet?\",\n",
+    "        \"ontology_schema\": ontology_schema,\n",
+    "        \"named_entities\": [\n",
     "            {\n",
     "                \"class\": \"https://swapi.co/vocabulary/Human\",\n",
     "                \"inst\": \"https://swapi.co/resource/human/1\",\n",
     "            },\n",
     "        ],\n",
-    "})[\n",
-    "    chain.output_key_answer\n",
-    "]"
+    "    }\n",
+    ")[chain.output_key_answer]"
    ]
   },
   {
