--- a/docs/docs/integrations/text_embedding/cohere.ipynb
+++ b/docs/docs/integrations/text_embedding/cohere.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_cohere import CohereEmbeddings"
+    "from langchain.embeddings import CohereEmbeddings"
    ]
   },
   {
