--- a/docs/docs/integrations/text_embedding/fireworks.ipynb
+++ b/docs/docs/integrations/text_embedding/fireworks.ipynb
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "d817716b",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "'LangChain is the framework for building context-aware reasoning applications'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
     "retrieved_documents = retriever.invoke(\"What is LangChain?\")\n",
     "\n",
     "# show the retrieved document's content\n",
-    "retrieved_document[0].page_content"
+    "retrieved_documents[0].page_content"
    ]
   },
   {
