--- a/docs/docs/integrations/text_embedding/fireworks.ipynb
+++ b/docs/docs/integrations/text_embedding/fireworks.ipynb
@@ -20,11 +20,12 @@
     "This will help you get started with Fireworks embedding models using LangChain. For detailed documentation on `FireworksEmbeddings` features and configuration options, please refer to the [API reference](https://api.python.langchain.com/en/latest/embeddings/langchain_fireworks.embeddings.FireworksEmbeddings.html).\n",
     "\n",
     "## Overview\n",
+    "\n",
     "### Integration details\n",
     "\n",
-    "| Class | Package | Local | Serializable | [JS support](https://js.langchain.com/v0.2/docs/integrations/text_embedding/fireworks) | Package downloads | Package latest |\n",
-    "| :--- | :--- | :---: | :---: |  :---: | :---: | :---: |\n",
-    "| [FireworksEmbeddings](https://api.python.langchain.com/en/latest/embeddings/langchain_fireworks.embeddings.FireworksEmbeddings.html) | [langchain-fireworks](https://api.python.langchain.com/en/latest/fireworks_api_reference.html) | ❌ | ❌ | ✅ | ![PyPI - Downloads](https://img.shields.io/pypi/dm/langchain-fireworks?style=flat-square&label=%20) | ![PyPI - Version](https://img.shields.io/pypi/v/langchain-fireworks?style=flat-square&label=%20) |\n",
+    "import { ItemTable } from \"@theme/FeatureTables\";\n",
+    "\n",
+    "<ItemTable category=\"text_embedding\" item=\"fireworks\" />\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "36521c2a",
    "metadata": {},
    "outputs": [],
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "39a4953b",
    "metadata": {},
    "outputs": [],
@@ -80,21 +81,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "64853226",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.0\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install -qU langchain-fireworks"
    ]
@@ -106,14 +96,12 @@
    "source": [
     "## Instantiation\n",
     "\n",
-    "Now we can instantiate our model object and generate chat completions:\n",
-    "\n",
-    "- TODO: Update model instantiation with relevant params."
+    "Now we can instantiate our model object and generate chat completions:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "9ea7a09b",
    "metadata": {},
    "outputs": [],
@@ -139,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "d817716b",
    "metadata": {},
    "outputs": [
@@ -149,7 +137,7 @@
        "'LangChain is the framework for building context-aware reasoning applications'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "0d2befcd",
    "metadata": {},
    "outputs": [
@@ -222,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "2f4d6e97",
    "metadata": {},
    "outputs": [
@@ -246,47 +234,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98785c12",
+   "id": "3fba556a-b53d-431c-b0c6-ffb1e2fa5a6e",
    "metadata": {},
    "source": [
-    "### Async Usage\n",
+    "## API Reference\n",
     "\n",
-    "You can also use `aembed_query` and `aembed_documents` for producing embeddings asynchronously:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "4c3bef91",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.01666259765625, 0.011688232421875, -0.1181640625, -0.10205078125, 0.05438232421875, -0.0890502929\n"
-     ]
-    }
-   ],
-   "source": [
-    "import asyncio\n",
-    "\n",
-    "\n",
-    "async def async_example():\n",
-    "    single_vector = await embeddings.aembed_query(text)\n",
-    "    print(str(single_vector)[:100])  # Show the first 100 characters of the vector\n",
-    "\n",
-    "\n",
-    "if asyncio.get_event_loop().is_running():\n",
-    "    # This branch is used when in a jupyter notebook.\n",
-    "    # Which already has a running event loop!\n",
-    "    await async_example()\n",
-    "else:\n",
-    "    # This code path is used when testing from\n",
-    "    # python or ipython interpreters that do not start\n",
-    "    # an event loop by default.\n",
-    "\n",
-    "    asyncio.run(async_example())"
+    "For detailed documentation of all `FireworksEmbeddings` features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/embeddings/langchain_fireworks.embeddings.FireworksEmbeddings.html)."
    ]
   }
  ],
