generate appropriate name

--- a/libs/cli/langchain_cli/integration_template/docs/text_embedding.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/text_embedding.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "import { ItemTable } from \"@theme/FeatureTables\";\n",
     "\n",
-    "<ItemTable category=\"text_embedding\" item=\"fireworks\" />\n",
+    "<ItemTable category=\"text_embedding\" item=\"__ModuleName__\" />\n",
     "\n",
     "## Setup\n",
     "\n",
