--- a/docs/docs/integrations/text_embedding/openai.ipynb
+++ b/docs/docs/integrations/text_embedding/openai.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "36521c2a",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "39a4953b",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "9ea7a09b",
    "metadata": {},
    "outputs": [],
@@ -111,6 +111,10 @@
     "\n",
     "embeddings = OpenAIEmbeddings(\n",
     "    model=\"text-embedding-3-large\",\n",
+    "    # With the `text-embedding-3` class\n",
+    "    # of models, you can specify the size\n",
+    "    # of the embeddings you want returned.\n",
+    "    # dimensions=1024\n",
     ")"
    ]
   },
@@ -128,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "d817716b",
    "metadata": {},
    "outputs": [
@@ -138,7 +142,7 @@
        "'LangChain is the framework for building context-aware reasoning applications'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "0d2befcd",
    "metadata": {},
    "outputs": [
@@ -190,7 +194,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.019260549917817116, 0.0037612367887049913, -0.03291035071015358, 0.003757466096431017, 0.0082049\n"
+      "[-0.019276829436421394, 0.0037708976306021214, -0.03294256329536438, 0.0037671267054975033, 0.008175\n"
      ]
     }
    ],
@@ -211,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "2f4d6e97",
    "metadata": {},
    "outputs": [
@@ -219,8 +223,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.01925092749297619, 0.00382642331533134, -0.03294986113905907, 0.0036962986923754215, 0.008614638\n",
-      "[-0.010173559188842773, 0.02337813749909401, -0.042209744453430176, -0.0015426974277943373, -0.02353\n"
+      "[-0.019260549917817116, 0.0037612367887049913, -0.03291035071015358, 0.003757466096431017, 0.0082049\n",
+      "[-0.010181212797760963, 0.023419594392180443, -0.04215526953339577, -0.001532090245746076, -0.023573\n"
      ]
     }
    ],
