--- a/docs/docs/integrations/text_embedding/openai.ipynb
+++ b/docs/docs/integrations/text_embedding/openai.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "---\n",
     "sidebar_label: OpenAI\n",
-    "keywords: [openai, embeddings, openaiembeddings]\n",
+    "keywords: [openaiembeddings]\n",
     "---"
    ]
   },
