--- a/docs/docs/integrations/vectorstores/objective.ipynb
+++ b/docs/docs/integrations/vectorstores/objective.ipynb
@@ -127,7 +127,7 @@
     "    id=\"1\", page_content=\"qux\", metadata={\"source\": \"https://another-example.com\"}\n",
     ")\n",
     "\n",
-    "vector_store.upsert(updated_document)"
+    "vector_store.upsert([updated_document])"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
