add new doc section

--- a/docs/docs/integrations/vectorstores/objective.ipynb
+++ b/docs/docs/integrations/vectorstores/objective.ipynb
@@ -235,6 +235,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c750c66-4455-4dfd-91e3-757074b6f6a0",
+   "metadata": {},
+   "source": [
+    "## Usage for retrieval-augmented generation\n",
+    "\n",
+    "For guides on how to use this vector store for retrieval-augmented generation (RAG), see the following sections:\n",
+    "\n",
+    "- [Tutorials: working with external knowledge](https://python.langchain.com/v0.2/docs/tutorials/#working-with-external-knowledge)\n",
+    "- [How-to: Question and answer with RAG](https://python.langchain.com/v0.2/docs/how_to/#qa-with-rag)\n",
+    "- [Retrieval conceptual docs](https://python.langchain.com/v0.2/docs/concepts/#retrieval)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "decd202f-936e-4938-a022-91a6f52a6094",
    "metadata": {},
    "source": [
