docs: fix 'Tavily Search' import Error in tavily_search.ipynb
fix #25256

--- a/docs/docs/integrations/tools/tavily_search.ipynb
+++ b/docs/docs/integrations/tools/tavily_search.ipynb
@@ -103,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_community.tools import TavilySearchResults\n",
+    "from langchain_community.tools.tavily_search import TavilySearchResults\n",
     "\n",
     "tool = TavilySearchResults(\n",
     "    max_results=5,\n",
