--- a/docs/docs/integrations/llms/fireworks.ipynb
+++ b/docs/docs/integrations/llms/fireworks.ipynb
@@ -57,7 +57,7 @@
     "import os\n",
     "\n",
     "if \"FIREWORKS_API_KEY\" not in os.environ:\n",
-    "    os.environ[\"FIREWORKS_API_KEY\"] = getpass.getpass(\"Fireworks API Key:\")\n"
+    "    os.environ[\"FIREWORKS_API_KEY\"] = getpass.getpass(\"Fireworks API Key:\")"
    ]
   },
   {
